samples/_failures_safe/1761528978_af0bbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_940c4655.c: In function ‘tokenize’:
./samples/SAFE/__tmp_940c4655.c:182:9: error: expected expression at end of input
  182 |         else if (parse_identifier(input, &pos, &token))
      |         ^~~~
./samples/SAFE/__tmp_940c4655.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_940c4655.c:182:9: error: expected declaration or statement at end of input
